# doggy-dog-diary

./: .gitignore  CONTEXT.md  Makefile  README.md  config.example.yaml  pyproject.toml
.cursor/rules/: testing.mdc
.github/workflows/: ci.yml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_dogs_table.py
backend/doggy_dog_diary/: __init__.py  app.py  cli.py  config.py  database.py  dogs.py
backend/doggy_dog_diary/routers/: dogs.py
backend/doggy_dog_diary/schemas/: __init__.py  dog.py
backend/tests/: conftest.py  test_config.py  test_dogs.py  test_health.py  test_spa_static.py
docs/: design.md  design_plan.md  project_brief.md
docs/adr/: 0001-sqlite-and-filesystem-persistence.md  0002-export-as-zip-archive.md  0003-peer-instances-file-sync.md  0004-single-process-local-runtime.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: home.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: dogs.ts
frontend/src/components/: AddDogOverlay.tsx  AddDogTile.tsx  DogTile.tsx  Overlay.tsx  ProfileSummary.tsx  QuickEditOverlay.tsx
frontend/src/lib/: format.ts
frontend/src/pages/: DogDetailPage.tsx  HomePage.tsx
frontend/src/types/: dog.ts
scripts/: e2e-server.sh  publish-github-issues-7-26.sh  publish-github-issues.sh
