[project]
name = "doggy-dog-diary"
version = "0.1.0"
description = "Local-first household pet diary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0,<2",
    "fastapi>=0.115.0,<1",
    "pyyaml>=6.0.2,<7",
    "sqlalchemy>=2.0.36,<3",
    "uvicorn[standard]>=0.32.0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9",
    "httpx>=0.28.0,<1",
]

[project.scripts]
doggy-dog-diary = "doggy_dog_diary.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
src = ["backend"]
